playing with sessions

--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -4,4 +4,9 @@
             <a href="/polls">A Polls Application</a>
         </p>
     </li>
+    <li>
+        <p>
+            <a href="/hello">Test the session</a>
+        </p>
+    </li>
 </ul>
