Added creation of an automobile make

--- a/autos/templates/autos/auto_list.html
+++ b/autos/templates/autos/auto_list.html
@@ -25,6 +25,6 @@
     </p>
     <p>
         <a href="{% url 'autos:make_list' %}">View makes</a> ({{ make_count }}) |
-        {% comment %} <a href="{% url 'autos:make_create' %}">Add a make</a> {% endcomment %}
+        <a href="{% url 'autos:make_create' %}">Add a make</a>
     </p>
 {% endblock %}
