--- a/autos/templates/autos/make_list.html
+++ b/autos/templates/autos/make_list.html
@@ -15,7 +15,7 @@
         <p>There are no makes in the library.</p>
     {% endif %}
     <p>
-        {% comment %} <a href="{% url 'autos:make_create' %}">Add a make</a> {% endcomment %}
+        <a href="{% url 'autos:make_create' %}">Add a make</a>
     </p>
     <p>
         <a href="{% url 'autos:all' %}">Back to autos</a>
