--- a/autos/templates/autos/make_list.html
+++ b/autos/templates/autos/make_list.html
@@ -6,8 +6,8 @@
             {% for make in make_list %}
                 <li>
                     {{ make.name }}
-                    {% comment %} (<a href="{% url 'autos:make_update' make.id %}">Update</a> |
-                    <a href="{% url 'autos:make_delete' make.id %}">Delete</a>) {% endcomment %}
+                    (<a href="{% url 'autos:make_update' make.id %}">Update</a> |
+                    <a href="{% url 'autos:make_delete' make.id %}">Delete</a>)
                 </li>
             {% endfor %}
         </ul>
