--- a/autos/templates/autos/auto_list.html
+++ b/autos/templates/autos/auto_list.html
@@ -6,8 +6,8 @@
             {% for auto in auto_list %}
                 <li>
                     {{ auto.nickname }} ({{ auto.make }})
-                    {% comment %} (<a href="{% url 'autos:auto_update' auto.id %}">Update</a> |
-                    <a href="{% url 'autos:auto_delete' auto.id %}">Delete</a>) {% endcomment %}
+                    (<a href="{% url 'autos:auto_update' auto.id %}">Update</a> |
+                    <a href="{% url 'autos:auto_delete' auto.id %}">Delete</a>)
                     <br />
                     {{ auto.comments }} ({{ auto.mileage }} miles)
                 </li>
@@ -18,7 +18,7 @@
     {% endif %}
     <p>
         {% if make_count > 0 %}
-            {% comment %} <a href="{% url 'autos:auto_create' %}">Add an auto</a> {% endcomment %}
+            <a href="{% url 'autos:auto_create' %}">Add an auto</a>
         {% else %}
             Please add a make before you add an auto.
         {% endif %}
