--- a/home/templates/base_bootstrap.html
+++ b/home/templates/base_bootstrap.html
@@ -5,8 +5,7 @@
         <title>
             {% block title %}{{ settings.APP_NAME }}{% endblock %}
         </title>
-        <!-- Replace this value (42-42) with the one provided by the autograder -->
-        <meta name="dj4e" content="42-42">
+        <meta name="dj4e" content="7678e481d33ca2bc5662989f7c9212f1">
         <meta name="dj4e-code" content="42173286792234">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
               rel="stylesheet"
