--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -14,4 +14,9 @@
             <a href="/autos">Autos CRUD</a>
         </p>
     </li>
+    <li>
+        <p>
+            <a href="/cats">Cats CRUD</a>
+        </p>
+    </li>
 </ul>
