--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -5,8 +5,8 @@
     <span style="float: right;">
         ({{ ad.updated_at|naturaltime }})
         {% if ad.owner == user %}
-            {% comment %} <a href="{% url 'ads:ad_update' ad.id %}"><i class="fa fa-pencil"></i></a> {% endcomment %}
-            {% comment %} <a href="{% url 'ads:ad_delete' ad.id %}"><i class="fa fa-trash"></i></a> {% endcomment %}
+            <a href="{% url 'ads:ad_update' ad.id %}"><i class="fa fa-pencil"></i></a>
+            <a href="{% url 'ads:ad_delete' ad.id %}"><i class="fa fa-trash"></i></a>
         {% endif %}
     </span>
     <h1>{{ ad.title }}</h1>
