--- a/ads/templates/ads/ad_list.html
+++ b/ads/templates/ads/ad_list.html
@@ -7,10 +7,10 @@
                 {% for ad in ad_list %}
                     <li>
                         <a href="{% url 'ads:ad_detail' ad.id %}">{{ ad.title }}</a>
-                        {% comment %} {% if ad.owner == user %} {% endcomment %}
-                            {% comment %} (<a href="{% url 'ads:ad_update' ad.id %}">Edit</a> | {% endcomment %}
-                            {% comment %} <a href="{% url 'ads:ad_delete' ad.id %}">Delete</a>) {% endcomment %}
-                        {% comment %} {% endif %} {% endcomment %}
+                        {% if ad.owner == user %}
+                            (<a href="{% url 'ads:ad_update' ad.id %}">Edit</a> |
+                            <a href="{% url 'ads:ad_delete' ad.id %}">Delete</a>)
+                        {% endif %}
                     </li>
                 {% endfor %}
             </ul>
@@ -19,7 +19,7 @@
         {% endif %}
     </p>
     <p>
-        {% comment %} <a href="{% url 'ads:ad_create' %}">Add an Ad</a> | {% endcomment %}
+        <a href="{% url 'ads:ad_create' %}">Add an Ad</a> |
         {% if user.is_authenticated %}
             <a href="{% url 'logout' %}?next={% url 'ads:all' %}">Logout</a>
         {% else %}
