--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -11,6 +11,7 @@
     </span>
     <h1>{{ ad.title }}</h1>
     <p>{{ ad.text }}</p>
+    <p>Price: {{ ad.price }}</p>
     <p></p>
     <p>
         <a href="{% url 'ads:all' %}">All ads</a>
